<resources>
    <string name="app_name">照片墙</string>
    <string name="footer_loading">正在加载</string>
    <string name="footer_nodata">没有更多图片了</string>
    <string name="footer_error">加载失败，点击重试</string>
    <string name="random"><u>随便看看</u></string>
    <string name="manage_guide_uneditable">长按进行编辑</string>
    <string name="manage_guide_editable">可拖动进行排序</string>
    <string name="manage_guide_empty">点击添加相册</string>
    <string name="negative">取消</string>
    <string name="positive">确定</string>
    <string name="delete_photo">删除</string>
    <string name="comment">评论...</string>
    <string name="collection_album">收藏相册</string>
    <string name="photo_overselected">最多只能选择%d张照片</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up">没有账号？<u>点击注册</u></string>
    <string name="sign_in">已有账号？<u>点击登录</u></string>
    <string name="login_in">登录</string>
    <string name="register">注册</string>
    <string name="mobile_hint">请输入您的手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="name_hint">请输入您的用户名</string>
    <string name="password_repeat_hint">请确认密码</string>
    <string name="mobile">手机号</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="reaccess_album">权限已失效，请重新登录相册</string>
    <string name="add_album">添加相册</string>
    <string name="json_error">数据异常</string>
    <string name="server_error">服务器异常</string>
    <string name="open_drawer">打开抽屉菜单</string>
    <string name="close_drawer">关闭抽屉菜单</string>
    <string name="collect_fail">收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="my_album">我的相册</string>
    <string name="my_favorite">我的收藏</string>
    <string name="log_out">退出登录</string>
    <string name="album_hint_public">该相册可以被其他用户访问</string>
    <string name="album_hint_private">该相册需要分享码才能访问</string>
    <string name="album_permission_guide">是否公开？</string>
    <string name="read_password_hint">可访问私有相册</string>
    <string name="mod_password_hint">可管理相册图片</string>
    <string name="read_password">访问密码</string>
    <string name="mod_password">权限密码</string>
    <string name="visit_album">进入相册</string>
    <string name="modify_title">设置标题</string>
    <string name="modify_description">设置相册描述</string>
    <string name="create_description_hint">选填</string>
    <string name="create_description">相册描述：</string>
    <string name="create_title">相册名：</string>
    <string name="create_title_hint">相册标题</string>
    <string name="create_album">创建相册</string>
    <string name="album_public">公开</string>
    <string name="album_private">私密</string>

</resources>
