<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/info_page">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="创建相册"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tv_description_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start|center_vertical"
                android:text="@string/create_title"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:gravity="start|center_vertical"
                android:hint="@string/create_title_hint"
                android:maxLength="15"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:id="@+id/line_title"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ll_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/rl_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_title"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/create_description"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_description"
                android:layout_below="@id/tv_description"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="start|center_vertical"
                android:hint="@string/create_description_hint"
                android:maxLength="100"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:id="@+id/line_description"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_description"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_info"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/permission_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/album_hint_public"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/permission_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/permission_hint"
            android:layout_marginTop="5dp"
            android:text="@string/album_permission_guide"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/rg_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/permission_hint"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/album_public" />

            <RadioButton
                android:id="@+id/rb_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_private" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_permission"
            android:layout_marginTop="3dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_read_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/read_password"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_read_password"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/tv_read_password"
                android:background="@drawable/bg_edittext_create_album"
                android:drawableEnd="@mipmap/ic_visibility_off_grey"
                android:gravity="start|center_vertical"
                android:hint="@string/read_password_hint"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingLeft="5dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_mod_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_read_password"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/mod_password"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_mod_password"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_below="@id/et_read_password"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/tv_mod_password"
                android:background="@drawable/bg_edittext_create_album"
                android:drawableEnd="@mipmap/ic_visibility_off_grey"
                android:gravity="start|center_vertical"
                android:hint="@string/mod_password_hint"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingLeft="5dp"
                android:textSize="14sp" />
        </RelativeLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_me_button"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/create_album"
        android:textColor="@android:color/black"
        android:textSize="19sp" />

</RelativeLayout>