<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical"
    tools:context=".redirect.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="@dimen/login_item_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up"
                android:textColor="#97bde4"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:elevation="5dp"
            android:background="@android:color/holo_blue_light" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_mobile"
            android:layout_width="@dimen/login_item_width"
            android:layout_height="@dimen/login_item_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/mobile"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="@dimen/login_item_width"
                android:layout_height="@dimen/login_edit_height"
                android:layout_alignParentBottom="true"
                android:background="@color/windowBackground"
                android:hint="@string/mobile_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:layout_marginTop="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="12dp"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_name"
            android:layout_width="@dimen/login_item_width"
            android:layout_height="@dimen/login_item_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="@dimen/login_item_width"
                android:layout_height="@dimen/login_edit_height"
                android:layout_alignParentBottom="true"
                android:background="@color/windowBackground"
                android:hint="@string/name_hint"
                android:layout_marginTop="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="12dp"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="@dimen/login_item_width"
            android:layout_height="@dimen/login_item_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/login_item_width"
                android:layout_height="@dimen/login_edit_height"
                android:layout_alignParentBottom="true"
                android:background="@color/windowBackground"
                android:drawableEnd="@mipmap/ic_visibility_off"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="12dp"
                android:textSize="15sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login_in"
            android:layout_width="@dimen/login_item_width"
            android:layout_height="@dimen/login_item_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccentLight"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/login_in"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

    </LinearLayout>


</LinearLayout>